# alx

./: CMakeLists.txt  README.md
include/alx/: rassert.h  trace.h
mod/: alx.cppm  concepts.cppm  rassert.cppm  valgebra.cppm
mod/trig/: angle.cppm  bams.cppm  brads.cppm  conversion.cppm  degrees.cppm  func.cppm  gradians.cppm  hourangles.cppm  pi.cppm  points.cppm  quadrants.cppm  radians.cppm  sextants.cppm  trig.cppm  turns.cppm
